Updated main file path

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -80,7 +80,7 @@ jobs:
           files: |
             ./target/*.jar
       - name: Copy Output
-        run: docker container cp sem_employees:./tmp/reports ./
+        run: docker container cp sem:./tmp/reports ./
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4.2.5
         with:
